taskcar-motor-driver/build/log/idf_py_stderr_output_34507
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:7: warning: "CONFIG_LOG_MAXIMUM_LEVEL" redefined
    7 | #define CONFIG_LOG_MAXIMUM_LEVEL ESP_LOG_VERBOSE
      | 
In file included from /home/joagz/esp/esp-idf/components/newlib/platform_include/assert.h:12,
                 from /home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/sys/reent.h:458,
                 from /home/joagz/esp/esp-idf/components/newlib/platform_include/sys/reent.h:22,
                 from /home/joagz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/stdio.h:60,
                 from /home/joagz/esp/esp-idf/components/esp_common/include/esp_err.h:10,
                 from /home/joagz/esp/esp-idf/components/driver/ledc/include/driver/ledc.h:9,
                 from /home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:1:
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/build/config/sdkconfig.h:487: note: this is the location of the previous definition
  487 | #define CONFIG_LOG_MAXIMUM_LEVEL 3
      | 
In file included from /home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:2:
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c: In function 'writem':
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:111:46: error: 'motor_c' undeclared (first use in this function); did you mean 'motor_in2'?
  111 |     ESP_LOGD("driver", "writem to motor %d", motor_c);
      |                                              ^~~~~~~
/home/joagz/esp/esp-idf/components/log/include/esp_log.h:436:137: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/joagz/esp/esp-idf/components/log/include/esp_log.h:369:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  369 | #define ESP_LOGD( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_DEBUG,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:111:5: note: in expansion of macro 'ESP_LOGD'
  111 |     ESP_LOGD("driver", "writem to motor %d", motor_c);
      |     ^~~~~~~~
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:111:46: note: each undeclared identifier is reported only once for each function it appears in
  111 |     ESP_LOGD("driver", "writem to motor %d", motor_c);
      |                                              ^~~~~~~
/home/joagz/esp/esp-idf/components/log/include/esp_log.h:436:137: note: in definition of macro 'ESP_LOG_LEVEL'
  436 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/joagz/esp/esp-idf/components/log/include/esp_log.h:369:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  369 | #define ESP_LOGD( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_DEBUG,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/joagz/esp/esp-idf/projects/taskcar-oficial/taskcar-motor-driver/main/components/motor_driver/motor_driver.c:111:5: note: in expansion of macro 'ESP_LOGD'
  111 |     ESP_LOGD("driver", "writem to motor %d", motor_c);
      |     ^~~~~~~~
make[2]: *** [esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/build.make:79: esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/motor_driver.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5631: esp-idf/motor_driver/CMakeFiles/__idf_motor_driver.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:136: all] Error 2
